--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Nong/Downloads/jdatepicker-1.3.2.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/numan/git/Project/lib/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/numan/git/Project/lib/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/numan/git/Project/lib/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/numan/git/Project/lib/lib/jackcess-2.1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/numan/git/Project/lib/lib/ucanaccess-4.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
