--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="ucanaccess/ucanaccess-4.0.2.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="ucanaccess/rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
